syntax = "proto3";

option go_package = ".;pb";

message LogoutRequest {
  string token = 36;
}
message LogoutResponse{
  bool status = 37;
}
